classDiagram
    direction LR

    %% Controller layer
    class SubmissionController

    %% Service interface and implementation
    class ISubmissionService
    class SubmissionService
    SubmissionController --> ISubmissionService : "calls"
    SubmissionService ..|> ISubmissionService : "implements"

    %% Dependencies
    class IIdentityRepository
    class IUnitOfWork
    SubmissionService --> IIdentityRepository : "uses"
    SubmissionService --> IUnitOfWork : "uses"

    %% Entities
    class Submission
    class TopicVersion
    class Phase

    %% IUnitOfWork provides access to entity repositories
    IUnitOfWork --> TopicVersion
    IUnitOfWork --> Phase

    %% Aggregation entity relationships (no duplicate arrows)
    TopicVersion "1" o-- "*" Submission : "has submissions"
    Phase "1" o-- "*" Submission : "has submissions"
